<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ks.aplikasidicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.ks.aplikasidicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.ks.aplikasidicodingevent.ui.finished.FinishedFragment"
        android:label="@string/title_finish"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.ks.aplikasidicodingevent.ui.detail.DetailEventFragment"
        android:label="@string/detail_event"
        tools:layout="@layout/fragment_detail_event">
        <argument
            android:name="eventId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ks.aplikasidicodingevent.ui.search.SearchFragment"
        tools:layout="@layout/fragment_search" >
        <argument
            android:name="status"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:label="@string/favorite"
        android:name="com.ks.aplikasidicodingevent.ui.favorite.FavoriteFragment"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:label="@string/setting"
        android:name="com.ks.aplikasidicodingevent.ui.setting.SettingFragment"
        tools:layout="@layout/fragment_setting" />
</navigation>